# raytracing

./: .gitignore  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile
scenes/: malformated.json
src/lodepng/: Makefile  cmake_install.cmake
src/rayimage/: Image.hpp  Makefile  cmake_install.cmake
src/raymath/: AABB.cpp  AABB.hpp  Makefile  Transform.hpp  Vector3.cpp  Vector3.hpp  cmake_install.cmake
src/rayscene/: Camera.cpp  Makefile  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Scene.cpp  SceneLoader.hpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  cmake_install.cmake
tests/: test_runner.cpp
